Bug 1212129 - e10s support for disabling site notifications. r=wchen

--HG--
extra : commitid : DPxANWhtVhu
extra : rebase_source : ba1b2c4cc9a93f7acbc4b68936b808dfc3552294